--- a/doc/README.ps
+++ b/doc/README.ps
@@ -1,16 +1,16 @@
 %!PS-Adobe-2.0
 %%Creator: dvipsk 5.58f Copyright 1986, 1994 Radical Eye Software
 %%Title: README.dvi
-%%Pages: 6
+%%Pages: 4
 %%PageOrder: Ascend
 %%BoundingBox: 0 0 596 842
-%%DocumentFonts: Palatino-Roman Courier Palatino-Bold
+%%DocumentFonts: Palatino-Roman Courier Palatino-Bold Palatino-Italic
 %%DocumentPaperSizes: a4
 %%EndComments
 %DVIPSCommandLine: dvips -o /home/karsten/src/Projects/M/doc/README.ps
 %+ README.dvi
 %DVIPSParameters: dpi=300, compressed, comments removed
-%DVIPSSource:  TeX output 1998.08.06:2028
+%DVIPSSource:  TeX output 1998.08.16:1105
 %%BeginProcSet: texc.pro
 /TeXDict 250 dict def TeXDict begin /N{def}def /B{bind def}N /S{exch}N
 /X{S N}B /TR{translate}N /isls false N /vsize 11 72 mul N /hsize 8.5 72
@@ -205,43 +205,37 @@ end definefont 3 -1 roll makefont /setfont load]cvx def}def
 end
 %%EndProcSet
 TeXDict begin 39158280 55380996 1000 300 300 (README.dvi)
-@start /Fa 103[30 30[30 30 30 1[30 30 30 30 1[30 30 30
-30 30 30 30 30 30 30 30 30 30 30 30 30 1[30 1[30 1[30
-30 30 30 3[30 30 30 1[30 30 30 30 30 2[30 30 30 30 30
-30 30 30 30 3[30 2[30 1[30 2[30 2[30 30 30 30 30 30 1[30
-30 30 30 40[{ TeXBase1Encoding ReEncodeFont }61 50.000001
-/Courier rf /Fb 134[33 1[50 1[37 20 27 23 1[37 33 37
-53 20 37 1[20 37 33 23 30 37 27 37 30 9[60 4[43 2[50
-50 1[37 2[23 50 1[33 2[43 13[30 30 30 30 30 1[18 15 4[20
-20 37[37 2[{ TeXBase1Encoding ReEncodeFont }40 59.999974
-/Palatino-Bold rf /Fc 1 16 df<EA03F0EA0FFC487E487E481380A2B512C0A86C1380
-A26C13006C5A6C5AEA03F012147D9519>15 D E /Fd 103[17 3[25
-25 25[28 26 42 28 30 16 21 20 28 30 27 29 44 14 28 12
-14 29 28 17 24 30 22 28 25 7[33 33 50 36 39 31 26 33
-1[30 39 41 47 30 36 1[17 41 38 28 30 39 35 30 39 6[12
-3[25 25 25 25 25 25 25 30 12 17 12 30 1[17 17 14 35[30
-30 2[{ TeXBase1Encoding ReEncodeFont }69 50.000001 /Palatino-Roman
-rf /Fe 134[28 25 41 1[30 17 22 19 1[30 28 30 44 17 2[17
-30 28 19 25 30 22 30 25 8[33 50 2[33 30 1[41 30 41 1[50
-30 2[19 2[28 2[36 1[39 9[25 25 25 25 25 25 25 1[15 12
-17 42[30 2[{ TeXBase1Encoding ReEncodeFont }45 50.000001
-/Palatino-Bold rf /Ff 134[40 3[44 24 32 28 1[44 40 44
-64 24 2[24 44 40 28 36 44 32 1[36 12[48 44 1[60 44 6[28
-2[40 2[52 1[56 9[36 36 36 36 36 36 36 46[44 2[{
- TeXBase1Encoding ReEncodeFont }34 71.999998 /Palatino-Bold
-rf /Fg 134[25 1[38 26 27 15 19 18 25 27 25 26 40 13 25
-1[13 26 1[15 22 28 20 25 23 12[28 6[43 3[15 26[11 46[{
- TeXBase1Encoding ReEncodeFont }26 45.624988 /Palatino-Roman
-rf /Fh 139[15 20 18 14[20 28 23 31[35 65[{
- TeXBase1Encoding ReEncodeFont }7 45.624988 /Palatino-Bold
-rf /Fi 138[36 36 36 36 1[36 36 36 36 36 3[36 36 1[36
-36 2[36 30[36 1[36 5[36 10[36 36 1[36 44[{
+@start /Fa 103[30 31[30 30 1[30 30 30 30 1[30 30 30 30
+30 30 30 30 30 30 30 30 30 30 30 30 19[30 10[30 7[30
+10[30 30 46[{ TeXBase1Encoding ReEncodeFont }28 50.000001
+/Courier rf /Fb 143[37 3[20 6[30 37 21[50 5[50 20[30
+1[30 2[15 46[{ TeXBase1Encoding ReEncodeFont }9 59.999974
+/Palatino-Bold rf /Fc 136[36 6[25 22 1[39 14 6[19 1[20
+26[39 25[12 46[{ TeXBase1Encoding ReEncodeFont }9 50.000001
+/Palatino-Italic rf /Fd 1 16 df<EA03F0EA0FFC487E487E481380A2B512C0A86C13
+80A26C13006C5A6C5AEA03F012147D9519>15 D E /Fe 134[28
+26 42 28 30 16 21 20 28 30 27 29 44 14 28 12 14 29 28
+17 24 30 22 28 25 7[33 33 50 36 39 31 26 33 39 30 39
+41 47 30 36 1[17 41 38 28 30 39 35 30 39 1[22 4[12 5[25
+25 25 25 1[30 12 17 12 2[17 17 14 5[14 30[30 2[{
+ TeXBase1Encoding ReEncodeFont }64 50.000001 /Palatino-Roman
+rf /Ff 138[44 24 32 28 1[44 40 44 64 24 2[24 44 1[28
+36 44 32 1[36 9[72 2[48 1[52 60 1[60 60 4[28 1[60 40
+1[60 2[56 1[32 9[36 36 36 36 36 3[24 18 2[24 24 40[{
+ TeXBase1Encoding ReEncodeFont }37 71.999998 /Palatino-Bold
+rf /Fg 136[38 1[27 15 19 18 1[27 25 26 40 13 2[13 26
+25 15 22 28 20 25 23 12[28 24 5[43 3[15 7[35 7[23 23
+23 5[23 2[11 1[11 41[27 2[{ TeXBase1Encoding ReEncodeFont }31
+45.624988 /Palatino-Roman rf /Fh 139[15 20 18 14[20 28
+23 31[35 65[{ TeXBase1Encoding ReEncodeFont }7 45.624988
+/Palatino-Bold rf /Fi 137[36 36 36 36 36 1[36 36 36 36
+36 2[36 2[36 36 36 36 1[36 30[36 1[36 17[36 36 45[{
  TeXBase1Encoding ReEncodeFont }20 59.999974 /Courier
-rf /Fj 3[36 134[36 19 25 24 3[35 1[17 3[35 33 1[29 37
-2[30 21[43 8[37 47 7[30 30 1[30 4[30 7[20 20 40[{
- TeXBase1Encoding ReEncodeFont }21 59.999974 /Palatino-Roman
-rf /Fk 139[28 37 3[47 2[25 6[41 3[43 14[58 3[72 32[29
-45[{ TeXBase1Encoding ReEncodeFont }9 86.416689 /Palatino-Roman
+rf /Fj 3[36 134[36 19 25 24 2[33 35 1[17 3[35 33 1[29
+37 27 1[30 4[36 16[43 7[42 37 47 6[15 30 30 1[30 4[30
+7[20 20 40[{ TeXBase1Encoding ReEncodeFont }26 59.999974
+/Palatino-Roman rf /Fk 173[58 4[81 7[53 67 2[67 19[29
+45[{ TeXBase1Encoding ReEncodeFont }6 86.416689 /Palatino-Roman
 rf /Fl 178[81 77[{ .167 SlantFont TeXBase1Encoding ReEncodeFont }1
 86.416689 /Palatino-Roman rf end
 %%EndProlog
@@ -255,266 +249,159 @@ a4
 
 %%EndSetup
 %%Page: 1 1
-1 0 bop 568 407 a Fl(M)31 b Fk(-)22 b(Release)f(Notes)725
-556 y Fj(Karsten)15 b(Ball\374der)85 631 y(\()p Fi(Ballueder@usa.net,)
-33 b(http://Ballueder.home.ml.org)o Fj(\))700 751 y(6th)15
-b(August)h(1998)828 936 y Fh(Abstract)250 1023 y Fg(This)c(document)g
-(is)g(a)f(set)h(of)f(notes)h(about)f(how)h(to)f(compile)h(and)g
-(install)g(M.)g(It)182 1080 y(also)f(covers)g(some)h(fr)o(equently)h
-(asked)e(questions.)60 1253 y Ff(Contents)60 1367 y Fe(1)50
-b(Introduction)1323 b(1)60 1477 y(2)50 b(Compilation)11
-b(notes)1188 b(2)135 1537 y Fd(2.1)52 b(Operating)13
-b(systems)f(speci\002c)20 b(.)25 b(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h
-(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)91 b(2)249
-1597 y(2.1.1)61 b(Linux)20 b(.)25 b(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h
-(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)
-f(.)h(.)91 b(2)249 1657 y(2.1.2)61 b(Solaris/SunOS)46
-b(.)26 b(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)
-g(.)h(.)f(.)g(.)h(.)f(.)h(.)91 b(2)249 1718 y(2.1.3)61
-b(Micr)o(osoft)13 b(W)m(indows)52 b(.)26 b(.)f(.)g(.)h(.)f(.)h(.)f(.)g
-(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)91
-b(2)135 1778 y(2.2)52 b(Other)13 b(issues/libraries)h(.)25
-b(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g
-(.)h(.)f(.)g(.)h(.)f(.)h(.)91 b(2)249 1838 y(2.2.1)61
-b(C-client)13 b(library)40 b(.)26 b(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)f
-(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)91
-b(2)249 1898 y(2.2.2)61 b(Python)27 b(.)f(.)f(.)h(.)f(.)g(.)h(.)f(.)g
-(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)
-h(.)f(.)h(.)91 b(3)249 1958 y(2.2.3)61 b(XFaces)33 b(.)26
-b(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f
-(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)91 b(3)60
-2068 y Fe(3)50 b(Installation)1346 b(3)135 2129 y Fd(3.1)52
-b(Con\002guration)14 b(and)e(Compilation)25 b(.)g(.)h(.)f(.)h(.)f(.)g
-(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)91
-b(3)60 2239 y Fe(4)50 b(Con\002guration)12 b(and)i(T)-6
-b(esting)1015 b(3)135 2299 y Fd(4.1)52 b(Con\002guration)14
-b(settings)40 b(.)26 b(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f
-(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)91 b(3)135
-2359 y(4.2)52 b(Reading)13 b(mail/news)20 b(.)25 b(.)g(.)h(.)f(.)g(.)h
-(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)
-f(.)h(.)91 b(4)135 2419 y(4.3)52 b(W)l(riting)13 b(mail/news)36
-b(.)25 b(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)
-h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)91 b(4)60 2529 y
-Fe(5)50 b(Scripting)12 b(and)i(Python)e(integration)861
-b(4)135 2589 y Fd(5.1)52 b(Intr)o(oduction)33 b(.)25
-b(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h
-(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)91 b(4)135
-2650 y(5.2)52 b(Initialisation)34 b(.)25 b(.)h(.)f(.)h(.)f(.)g(.)h(.)f
-(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)
-g(.)h(.)f(.)h(.)91 b(4)135 2710 y(5.3)52 b(Callback)13
-b(Functions)h(\(Hooks\))33 b(.)26 b(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f
-(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)91 b(4)903
-2856 y(1)p eop
+1 0 bop 645 407 a Fl(M)31 b Fk(-)22 b(README)85 556 y
+Fj(Karsten)15 b(Ball\374der)f(\\\\\()p Fi(Ballueder@usa.net)p
+Fj(\)\\\\Contact)g(us:)k Fi(m-developers@findmail.com)685
+676 y Fj(16th)d(August)h(1998)828 861 y Fh(Abstract)250
+949 y Fg(These)c(ar)o(e)g(the)g(r)o(elease)f(notes)h(for)g(M.)g(Some)f
+(mor)o(e)h(detailed)f(information)i(on)182 1005 y(how)e(to)g(compile,)i
+(install)f(und)g(use)g(it)f(ar)o(e)g(in)h(the)g(Information)g(\002les.)
+250 1062 y(This)k(information)g(r)o(elates)f(to)g(the)g(\002rst)h
+(public)h(alpha)f(r)o(elease,)g(17.)26 b(August)182 1118
+y(1998.)60 1291 y Ff(1)72 b(W)-6 b(ARNING)16 b(-)h(this)h(is)f
+(\(pre-?\)alpha)60 1405 y Fe(When)d(you)h(do)g(a)g(lar)o(ge)f(fr)o(ee)g
+(softwar)o(e)f(pr)o(oject,)j(you)e(have)h(two)f(choices:)21
+b(either)15 b(con-)60 1465 y(tinue)e(hacking)f(without)i(r)o(eleases)e
+(and)h(risk)f(to)h(never)f(get)g(it)h(\002nished,)h(or)f(set)f
+(yourself)60 1525 y(a)f(r)o(elease)g(date,)i(no)e(matter)g(what)g(the)g
+(situation)i(is.)j(As)11 b(we)g(got)g(several)g(r)o(equests)g(fr)o(om)
+60 1586 y(people)18 b(who)f(want)g(to)g(play)h(with)f(it,)j(we)d
+(decided)i(on)e(a)h(r)o(elease)f(date)h(and)f(did)i(our)60
+1646 y(best)14 b(to)h(get)f(it)h(into)g(a)g(working)e(shape.)22
+b(BUT)14 b(THIS)g(SOFTW)-5 b(ARE)15 b(IS)f(STILL)h(UNDER)60
+1706 y(DEVELOPMENT!)f(This)e(means)133 1820 y Fd(\017)24
+b Fe(it)13 b(is)g(incomplete)h(and)f(awkwar)o(d)e(to)i(use)133
+1922 y Fd(\017)24 b Fe(it)13 b(may)f(crash)g(occasionally)j(or)d(often)
+g(or)h(be)e(completely)j(unusable)60 2036 y(M)e(is)g(not)g(r)o(eady)g
+(for)f(the)h(end)g(user)f(yet,)h(but)g(we)f(pr)o(esent)g(it)i(in)f(its)
+g(curr)o(ent)g(state)g(to)g(give)60 2096 y(you)17 b(an)f(impr)o(ession)
+i(of)e(what)h(it)g(is)g(going)g(to)g(be.)28 b(W)-5 b(e)17
+b(also)g(hope)g(to)g(attract)g(a)f(bit)h(of)60 2156 y(attention)d(and)e
+(maybe)g(even)g(some)h(outside)h(help)e(for)g(it.)60
+2330 y Ff(2)72 b(Which)17 b(features)g(are)g(implemented?)60
+2443 y Fe(Quite)c(some)g(alr)o(eady)-6 b(,)13 b(but)g(mor)o(e)f(ar)o(e)
+g(still)i(missing.)j(What)12 b(we)g(have)h(so)f(far:)133
+2558 y Fd(\017)24 b Fe(Cr)o(oss-platform.)34 b(M)18 b(compiles)i(on)e
+(a)g(variety)h(of)f(Unix)g(systems)h(and)f(on)h(Mi-)182
+2618 y(cr)o(osoft)13 b(W)m(indows.)j(Use)d(one)f(mail)h(client,)i(no)d
+(matter)h(what)f(system)g(you)h(use.)903 2856 y(1)p eop
 %%Page: 2 2
-2 1 bop 135 203 a Fd(5.4)52 b(Namespaces)32 b(.)25 b(.)h(.)f(.)h(.)f(.)
-g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g
-(.)h(.)f(.)g(.)h(.)f(.)h(.)91 b(5)135 264 y(5.5)52 b(List)14
-b(of)e(Callbacks)21 b(.)k(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f
-(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)g(.)h(.)f(.)h(.)91
-b(5)60 374 y Fe(6)50 b(Further)13 b(Information)1153
-b(5)60 484 y(7)50 b(F)m(AQ)1505 b(5)60 657 y Ff(1)72
-b(Introduction)60 771 y Fd(M)18 b(is)g(intended)h(to)f(be)f(a)h
-(powerful)e(mail)j(and)f(news)f(client.)33 b(The)17 b(following)h
-(points)60 831 y(wer)o(e)11 b(signi\002cant)j(in)f(the)g(development)g
-(of)f(it)133 945 y Fc(\017)24 b Fd(it)13 b(should)h(have)e(an)h(easy)f
-(to)g(use)h(graphical)g(user)f(interface)133 1047 y Fc(\017)24
-b Fd(it)13 b(should)g(be)f(as)g(powerful)g(and)g(extensible)h(as)f
-(possible,)i(being)d(able)h(to)h(r)o(eplace)182 1107
-y(awkwar)o(d)j(tools)i(such)f(as)g(pr)o(ocmail,)j(thus)d(it)h(must)f
-(have)g(a)g(built)h(in)f(scripting)182 1167 y(language)133
-1269 y Fc(\017)24 b Fd(it)14 b(should)h(have)f(full)g(support)g(for)f
-(a)h(wide)g(range)f(of)g(standar)o(ds,)j(including)f(full)182
-1329 y(and)e(intuitive)h(MIME)f(support)133 1431 y Fc(\017)24
-b Fd(it)16 b(should)g(interact)g(with)f(other)g(pr)o(ograms)f
-(intuitively)-6 b(,)19 b(sending)d(MIME)f(mails)182 1491
-y(should)i(be)e(as)h(easy)f(as)h(dr)o(opping)g(\002les)g(fr)o(om)g(a)f
-(\002le)i(manager)d(in)j(the)e(message)182 1551 y(window)133
-1653 y Fc(\017)24 b Fd(it)13 b(should)h(run)e(on)g(a)h(wide)f(variety)h
-(of)f(systems)60 1826 y Ff(2)72 b(Compilation)16 b(notes)60
-1954 y Fb(2.1)59 b(Operating)14 b(systems)g(speci\002c)60
-2050 y Fe(2.1.1)50 b(Linux)60 2145 y Fd(If)9 b(compiling)i(with)e(a)h
-(non-default)g(compiler)g(like)g Fa(egcs)p Fd(,)g(make)f(sur)o(e)g
-(that)h Fa(/usr/include)60 2205 y Fd(is)i(not)g(in)g(the)g(include)h
-(path,)f(neither)g(should)h Fa(/usr/lib)e Fd(be)g(explicitly)i(listed.)
-k(M)12 b(has)60 2265 y(been)h(compiled)j(with)f Fa(egcs)e
-Fd(and)i Fa(gcc-2.8.x)e Fd(on)i(both,)g Fa(libc5)e Fd(and)i
-Fa(glibc2)e Fd(sys-)60 2325 y(tems.)60 2461 y Fe(2.1.2)50
-b(Solaris/SunOS)60 2557 y Fd(M)17 b(has)g(been)f(successfully)h
-(compiled)i(with)e Fa(gcc-2.8.0)e Fd(on)i(Solaris.)30
-b(Curr)o(ently)17 b(it)60 2617 y(does)c(not)g(compile)g(with)g(the)g
-(standar)o(d)g Fa(C++)f Fd(compiler)l(.)903 2856 y(2)p
+2 1 bop 133 203 a Fd(\017)24 b Fe(Based)10 b(on)g(the)g(c-client)h
+(library)e(fr)o(om)g(the)h(University)g(of)f(W)-5 b(ashington,)12
+b(ther)o(efor)o(e)182 264 y(full)g(access)g(to)g(a)f(wide)h(range)f(of)
+g(pr)o(otocols)i(and)f(\002le)g(formats,)g(including)h(SMTP)-6
+b(,)182 324 y(MAP)g(,)12 b(POP3,)i(NNTP)e(and)h(several)g(mailbox)f
+(formats.)133 425 y Fd(\017)24 b Fe(W)m(ide)13 b(\(extr)o(eme?\))i
+(user)d(con\002gurability)-6 b(.)17 b(Whatever)12 b(makes)g(sense)h(to)
+g(override)182 485 y(or)j(change,)g(can)g(be)f(changed)h(by)f(the)h
+(user)l(.)25 b(Con\002guration)17 b(supports)f(several)182
+545 y(con\002guration)e(\002les)g(on)f(Unix,)h(with)f(special)h
+(administrator)h(support)e(for)g(mak-)182 605 y(ing)g(entries)f
+(immutable,)i(and)f(the)f(r)o(egistry)g(on)h(W)m(indows.)133
+706 y Fd(\017)24 b Fe(Scriptable)14 b(and)g(extendable.)20
+b(M)14 b(includes)h(an)f(embedded)g(Python)g(interpr)o(eter)182
+766 y(with)k(full)h(access)g(to)g(its)g(object)e(hierar)o(chy)-6
+b(.)34 b(W)l(rite)18 b(object-oriented)h(scripts)g(to)182
+826 y(extend)12 b(and)h(contr)o(ol)h(M.)133 927 y Fd(\017)24
+b Fe(Easy)19 b(MIME)g(support.)36 b(T)-5 b(ext)19 b(and)g(other)g
+(content)h(can)f(be)f(fr)o(eely)g(mixed)i(and)182 987
+y(dif)o(fer)o(ent)12 b(\002letypes)h(ar)o(e)f(r)o(epr)o(esented)g(by)g
+(icons.)133 1088 y Fd(\017)24 b Fe(Inline)13 b(displaying)h(of)e
+(images,)h(clickable)g(URLs,)h(XFace)e(support.)133 1189
+y Fd(\017)24 b Fe(Multiple)14 b(mail)f(folders.)133 1289
+y Fd(\017)24 b Fe(Powerful)12 b(addr)o(ess)h(database)f(and)h(contact)g
+(manager)133 1390 y Fd(\017)24 b Fe(Printing)13 b(of)f(nicely)h
+(formatted)g(messages.)133 1491 y Fd(\017)24 b Fe(Full)17
+b(internationalisation)j(support,)e(M)e(speaks)h(multiple)h(languages,)
+f(but)g(no)182 1551 y(translations)d(yet.)60 1724 y Ff(3)72
+b(TODO,)17 b(features)f(to)i(implement)60 1838 y Fe(This)f(is)g(a)f
+(list)i(of)e(featur)o(es)f(on)i(our)f(T)o(ODO)g(list)i(that)f(we)e(ar)o
+(e)h(curr)o(ently)h(working)e(on.)60 1898 y(Befor)o(e)d(adding)i(new)d
+(featur)o(es,)i(we'll)f(clean)h(up)g(a)f(few)f(things:)133
+2008 y Fd(\017)24 b Fe(First)18 b(comes)g(a)g(r)o(ewrite)g(of)g(the)g
+(class)g(hierar)o(chy)-6 b(.)33 b(For)17 b(better)h(modularisation)182
+2068 y(and)g(CORBA)g(support)f(\(Python)g(will)i(pr)o(o\002t)e(fr)o(om)
+g(this,)j(too.\),)g(we)c(will)j(clean)182 2129 y(up)14
+b(header)f(\002les)i(and)f(r)o(emove)g(some)g(inter)o(dependencies.)21
+b(GUI)13 b(and)i(non-GUI)182 2189 y(code)c(will)h(be)e(better)g
+(separated,)i(class)f(implementations)i(and)e(interface)f(de\002ni-)182
+2249 y(tions)i(will)g(be)f(sorted)h(out)g(mor)o(e)f(clearly)-6
+b(.)16 b(This)11 b(includes)i(a)e(common)h(base)e(object)182
+2309 y(with)j(r)o(efer)o(ence)e(couting.)133 2410 y Fd(\017)24
+b Fe(Plug)13 b(the)f(\(very)g(few)f(r)o(emaining\))h(memory)g(holes.)60
+2520 y(Then)g(we)g(\002x)g(some)h(GUI)f(issues:)133 2631
+y Fd(\017)24 b Fe(add)13 b(keyboar)o(d)f(accelerators)g(and)h(pr)o
+(oper)f(tab)g(traversal)133 2731 y Fd(\017)24 b Fe(add)13
+b(a)g(context)f(sensitive)i(help)f(system)903 2856 y(2)p
 eop
 %%Page: 3 3
-3 2 bop 60 203 a Fe(2.1.3)50 b(Microsoft)12 b(W)n(indows)60
-299 y Fd(M)17 b(can)f(be)g(compiled)i(under)e(W)m(indows,)j(using)e
-(wxW)m(indows)f(V)-6 b(ersion)17 b(2.0)g(and)g(Mi-)60
-359 y(cr)o(osoft)c(V)m(isual)g(C++.)60 509 y Fb(2.2)59
-b(Other)15 b(issues/libraries)60 605 y Fe(2.2.1)50 b(C-client)12
-b(library)60 700 y Fd(A)18 b(copy)g(of)g(the)g Fa(c-client)29
-b(library)17 b Fd(is)i(r)o(equir)o(ed)f(and)h(is)f(included)i(with)f
-(the)f(M)60 760 y(sour)o(ces.)e(It)d(is)g(available)g(separately)f(fr)o
-(om)60 820 y Fa(ftp://ftp.cac.washington.edu/ima)o(p/imap.ta)o(r.Z)p
-Fd(.)7 b(Befor)o(e)i(compiling)60 881 y(it)k(with)g(M,)g(you)f(need)h
-(to)g(patch)f(it.)133 941 y(The)18 b(following)h(information)f(only)h
-(applies)g(if)f(you)g(use)g(a)g(separate)g Fa(c-client)60
-1001 y Fd(library)12 b(sour)o(ce:)133 1061 y(Unpack)17
-b(the)h(ar)o(chive)f(in)h(the)g(main)g(M)f(dir)o(ectory)-6
-b(,)21 b(then)c(change)g(into)i(the)e(IMAP)60 1121 y(dir)o(ectory)i
-(and)g(try)f(a)g(\002rst)g Fa(make)p Fd(,)i(i.e.)35 b(a)18
-b Fa(make)30 b(linux)17 b Fd(or)i Fa(make)29 b(gso)p
-Fd(.)k(This)19 b(will)60 1181 y(cr)o(eate)11 b(a)h(sour)o(ce)g(dir)o
-(ectory)g Fa(c-client)f Fd(with)g(lots)i(of)f(links)g(to)g(other)g
-(sour)o(ce)f(\002les)i(in)f(it.)133 1242 y(Then)18 b(install)j(the)e
-Fa(rfc822.c.patch)e Fd(on)i(c-client's)g Fa(rfc822.c)f
-Fd(\002le)i(fr)o(om)e(the)60 1302 y Fa(extra/patches)11
-b Fd(subdir)o(ectory)h(of)g(M)g(and)h(run)e(the)h Fa(c-client++)f
-Fd(script)i(fr)o(om)f(the)60 1362 y Fa(extra/scripts)i
-Fd(subdir)o(ectory)i(in)g(the)f(c-client)h(sour)o(ce)g(dir)o(ectory)-6
-b(,)18 b(which)d(will)i(r)o(e-)60 1422 y(name)e(variables)h(in)g(the)g
-(c-client)g(code)g(to)g(make)f(it)h(C++)h(compliant.)26
-b(If)15 b(ther)o(e)g(is)h(any)60 1482 y(pr)o(oblem,)k(it)f(helps)g(to)f
-(edit)h(the)g Fa(CCTYPE)e Fd(or)h Fa(CFLAGS)g Fd(\002les.)34
-b(After)17 b(cr)o(eation)i(of)f(the)60 1543 y(library)12
-b Fa(c-client.a)p Fd(,)g(all)h(object)f(\002les)h(can)g(be)f(deleted.)
-60 1679 y Fe(2.2.2)50 b(Python)60 1774 y Fa(configure)9
-b Fd(looks)i(for)e(Python)i(in)f Fa(/usr/local/src/Python-1.5)p
-Fd(.)j(If)c(your)h(Py-)60 1834 y(thon)15 b(is)h(installed)h(in)e(a)g
-(dif)o(fer)o(ent)g(location,)j(change)c(the)h(variable)g
-Fa(PYTHON_PATH)f Fd(at)60 1894 y(the)f(beginning)f(of)g
-Fa(configure)p Fd(.)60 2030 y Fe(2.2.3)50 b(XFaces)60
-2126 y Fd(If)19 b(you)g(have)g(the)g Fa(compface)f Fd(library)h(and)g
-(header)g(\002le)h(installed,)j(it)d(will)g(be)f(used)60
-2186 y(to)g(support)f(XFaces.)34 b(T)-5 b(o)18 b(install)j(it,)g
-(unpack)d(it)h(under)f(the)h(main)f(M)h(dir)o(ectory)g(and)60
-2246 y(apply)13 b(the)f(patch)h Fa(compface.patch)e Fd(fr)o(om)h(the)h
-Fa(extra/patches)e Fd(dir)o(ectory)i(to)g(its)60 2306
-y(sour)o(ces.)31 b(Compile)19 b(it)f(and)g(link)g(its)h(header)e(and)h
-(library)f(to)h(the)f Fa(extra/include)60 2366 y Fd(and)c
-Fa(extra/lib)e Fd(dir)o(ectories.)903 2856 y(3)p eop
+3 2 bop 133 203 a Fd(\017)24 b Fe(add)13 b(mor)o(e)f(dialogs)i(and)f(a)
+f(tr)o(ee)h(contr)o(ol)g(for)f(folder)h(selection)60
+309 y(After)f(that)g(we)g(r)o(each)g(the)h(list)h(of)e(serious)h(impr)o
+(ovements:)133 415 y Fd(\017)24 b Fe(Better)18 b(Python)f(support.)31
+b(W)-5 b(e)18 b(have)f(some)h(callbacks)g(in)g(place,)h(but)e(after)g
+(the)182 476 y(class)i(hierar)o(chy)g(r)o(ewrite)f(we)g(have)g(to)h
+(generate)f(new)g(interface)h(\002les)g(for)f(the)182
+536 y(complete)h(class)f(hierar)o(chy)-6 b(.)32 b(Also)19
+b(by)e(this)i(time)f(wxPython)g(might)g(be)f(integ-)182
+596 y(rated,)f(so)e(we)g(can)h(actually)g(write)g(some)g(of)f(the)h
+(con\002guration)g(dialogs)h(in)f(py-)182 656 y(thon)e(which)f(should)i
+(speed)f(things)g(up.)j Fc(Help)c(welcome.)133 756 y
+Fd(\017)24 b Fe(Full)10 b(Drag)e(and)i(Dr)o(op)f(interaction)i(with)f
+(\002lemanagers)f(of)g(W)m(indows)h(and)g(Gnome)182 816
+y(\(will)j(be)f(added)h(r)o(eal)g(soon,)g(easy\).)133
+916 y Fd(\017)24 b Fe(Easy)13 b(to)f(use)h(\002ltering)g(system)f(for)g
+(mails.)133 1015 y Fd(\017)24 b Fe(Support)13 b(for)e(V)l(-car)o(ds.)
+133 1115 y Fd(\017)24 b Fe(Nested)13 b(mail)h(folder)e(hierar)o(chy)-6
+b(.)133 1215 y Fd(\017)24 b Fe(Spam-Ex)12 b(spam)g
+(\002ghting/auto-complaint)j(function.)133 1314 y Fd(\017)24
+b Fe(Richt-text)13 b(editing)h(and)f(HTML)g(mail)g(support)133
+1414 y Fd(\017)24 b Fe(Support)13 b(for)e(PGP)i(and)g(GNU)g(Privacy)f
+(Guar)o(d)h(to)g(encrypt)f(mails.)133 1514 y Fd(\017)24
+b Fe(Thr)o(eading)12 b(of)g(messages)g(and)h(pr)o(oper)f(usenet)h(news)
+f(support.)133 1613 y Fd(\017)24 b Fe(Compr)o(ession)13
+b(of)g(mail)g(folders.)133 1713 y Fd(\017)24 b Fe(Delay-Folder)12
+b(to)h(keep)f(mails)h(and)g(r)o(e-pr)o(esent)e(them)i(at)f(a)h(later)f
+(date.)133 1813 y Fd(\017)24 b Fe(Context)13 b(sensitive)h(help)e
+(system)h(\(HTML)g(based\).)133 1912 y Fd(\017)24 b Fe(T)l(ranslations)
+13 b(to)f(German,)h(Fr)o(ench)f(and)g(Italian.)133 2012
+y Fd(\017)24 b Fe(W)m(ide)13 b(character)f(\(Unicode\))h(support)f(and)
+h(other)f(character)g(sets.)133 2112 y Fd(\017)24 b Fe(Import,)15
+b(export)f(and)h(synchr)o(onisation)g(with)g(other)f(pr)o(ograms')g
+(addr)o(ess)h(data-)182 2172 y(bases.)133 2272 y Fd(\017)24
+b Fe(V)-6 b(oice)13 b(mail.)133 2371 y Fd(\017)24 b Fe(Mor)o(e)12
+b(Python)h(support)g(thr)o(ough)f(wxPython.)133 2471
+y Fd(\017)24 b Fe(Support)d(for)g(Drag)f(and)h(Dr)o(op)g(interaction)h
+(with)g(KDE,)g(once)f(that)h(wxQt)e(is)182 2531 y(available.)133
+2631 y Fd(\017)k Fe(CORBA)13 b(support,)g(possible)h(cooperation)f
+(with)g(PINN)g(pr)o(oject.)133 2730 y Fd(\017)24 b Fe(ANY)13
+b(OTHER)g(SUGGESTION)903 2856 y(3)p eop
 %%Page: 4 4
-4 3 bop 60 205 a Ff(3)72 b(Installation)60 334 y Fb(3.1)59
-b(Con\002guration)14 b(and)g(Compilation)60 429 y Fd(Follow)f(these)g
-(steps:)120 543 y(1.)25 b(Edit)14 b Fa(configure)c Fd(so)j(it)f(will)h
-(\002nd)g(your)f(installation)i(of)e(Python.)k(If)11
-b(you)h(do)h(not)182 603 y(have)f(it,)i(just)e(skip)h(this)g(step.)120
-705 y(2.)25 b(Run)13 b Fa(configure)f Fd(to)h(cr)o(eate)f(the)h
-Fa(include/config.h)e Fd(and)i Fa(makeopts)f Fd(\002le.)182
-765 y(It)g(may)g(be)g(r)o(equir)o(ed)h(to)g(edit)g Fa(makeopts)f
-Fd(by)g(hand.)120 867 y(3.)25 b(Run)15 b Fa(make)29 b(dep)14
-b Fd(and)h Fa(cd)29 b(src)14 b Fd(and)h Fa(make)f Fd(to)h(compile)g
-(and)g(link)g(M.)g(Compil-)182 927 y(ing)c(some)g(of)g(the)h(sour)o(ce)
-f(\002les)h(will)g(take)e(an)h(enormous)h(amount)f(of)g(memory)-6
-b(,)12 b(so)182 987 y(make)g(sur)o(e)g(you)g(have)h(enough)f(virtual)h
-(memory)-6 b(.)60 1161 y Ff(4)72 b(Con\002guration)16
-b(and)h(T)-8 b(esting)60 1289 y Fb(4.1)59 b(Con\002guration)14
-b(settings)60 1384 y Fd(Under)e(Unix)g(all)h(con\002guration)g
-(settings)g(ar)o(e)e(stor)o(ed)i(in)g Fa(\230/.M/config)e
-Fd(under)h(W)m(in-)60 1444 y(dows)e(in)h(the)f(r)o(egistry)-6
-b(.)15 b(T)-5 b(o)10 b(get)f(an)h(overview)g(over)g(all)h(possible)f
-(con\002guration)h(options)60 1505 y(and)j(their)h(default)g(values,)g
-(set)g(the)f(value)g Fa(RecordDefaults=1)p Fd(.)20 b(Under)13
-b(Unix,)i(do)60 1565 y(this)e(by)f(cr)o(eating)h(a)f(new)g
-Fa(\230/.M/config)f Fd(\002le)i(containig)g(the)g(lines)133
-1625 y Fa([M])133 1685 y(RecordDefaults=1)133 1745 y
-Fd(After)18 b(running)g(M,)h(this)h(\002le)f(will)h(then)f(contain)g
-(all)h(default)f(settings.)36 b(Most)19 b(of)60 1806
-y(them)11 b(ar)o(e)g(easily)h(understood.)k(Otherwise,)c(the)f(\002le)h
-Fa(include/Mdefaults.h)d Fd(con-)60 1866 y(tains)k(them)g(all)g(with)g
-(some)f(short)h(comments.)60 2016 y Fb(4.2)59 b(Reading)15
-b(mail/news)60 2112 y Fd(T)-5 b(o)12 b(r)o(ead)f(news,)h(you)g(need)f
-(to)i(open)e(a)h(folder)l(.)k(The)11 b(default)h(incoming)h(mail)f
-(folder)g(has)60 2172 y(the)h(name)g Fa(INBOX)p Fd(.)g(Any)g(other)g
-(name)g(will)h(be)f(interpr)o(eted)h(as)f(a)g(\002lename)h(r)o(elative)
-g(to)60 2232 y(the)f(folder)f(dir)o(ectory)-6 b(.)60
-2383 y Fb(4.3)59 b(W)l(riting)15 b(mail/news)60 2478
-y Fd(Befor)o(e)c(being)h(able)f(to)i(send)f(mail,)h(you)f(need)g(to)g
-(con\002gur)o(e)f(the)h Fa(MailHost)f Fd(setting)i(to)60
-2538 y(tell)h(it)f(wher)o(e)e(to)i(send)g(the)g(mail.)903
-2856 y(4)p eop
-%%Page: 5 5
-5 4 bop 60 205 a Ff(5)72 b(Scripting)16 b(and)i(Python)f(integration)60
-334 y Fb(5.1)59 b(Introduction)60 429 y Fd(M)16 b(uses)g(Python)h(as)f
-(an)f(embedded)i(scripting)g(language.)26 b(A)16 b(lar)o(ge)f(number)h
-(of)f(user)60 489 y(de\002nable)20 b(callback)g(functions)g(ar)o(e)g
-(available.)38 b(Scripts)20 b(have)g(access)g(most)g(objects)60
-549 y(living)14 b(in)f(M.)60 700 y Fb(5.2)59 b(Initialisation)60
-795 y Fd(At)13 b(startup,)h(M)f(will)h(load)g(a)f(\002le)g(called)i
-Fa(Minit.py)d Fd(and)h(call)h(the)f Fa(Minit\(\))f Fd(function)60
-856 y(de\002ned)h(in)g(ther)o(e,)g(without)g(any)f(ar)o(guments.)60
-1006 y Fb(5.3)59 b(Callback)14 b(Functions)f(\(Hooks\))60
-1101 y Fd(Ther)o(e)g(ar)o(e)g(a)h(lar)o(ge)f(number)g(of)h(callbacks)g
-(available)h(which)e(will)i(be)e(called)j(fr)o(om)d(dif-)60
-1162 y(fer)o(ent)19 b(places)h(withing)g(M.)g(These)f(ar)o(e)h
-(documented)g(in)h Fa(Mcallbacks.h)p Fd(.)36 b(All)20
-b(of)60 1222 y(these)13 b(callbacks)f(ar)o(e)g(called)i(with)f(at)f
-(least)i(two)e(ar)o(guments:)120 1336 y(1.)25 b(The)9
-b(name)g(of)g(the)h(hook)f(for)g(which)h(the)f(function)i(got)e
-(called,)j(e.g.)j Fa(FolderOpenHook)120 1438 y Fd(2.)25
-b(A)9 b(pointer)h(to)g(the)f(object)h(fr)o(om)f(which)g(it)h(was)f
-(called.)17 b(E.g.)e(for)9 b Fa(FolderOpenHook)p Fd(,)182
-1498 y(this)18 b(would)g(be)f(a)g(pointer)g(to)h(a)f
-Fa(MailFolder)f Fd(object.)30 b(This)18 b(object)f(does)h(not)182
-1558 y(carry)e(a)h(useable)g(type)g(with)g(it)h(and)f(needs)h(to)f(be)g
-(converted)g(in)h(the)f(callback,)182 1618 y(e.g.)26
-b(if)16 b(the)g(ar)o(gument)g(is)g(called)i Fa(arg)d
-Fd(and)i(the)f(object)f(is)i(a)f Fa(MailFolder)p Fd(,)g(the)182
-1678 y(object)h(must)i(either)f(be)f(used)h(as)g Fa
-(MailFolder.MailFolder\(arg\))d Fd(or)j(be)182 1739 y(converted)13
-b(as)f Fa(mf)30 b(=)g(MailFolder.MailFolder\(arg\))p
-Fd(.)120 1840 y(3.)25 b(Some)15 b(callbacks)f(have)h(a)f(thir)o(d)h(ar)
-o(gument.)22 b(This)14 b(is)h(either)g(a)f(single)h(value)g(or)f(a)182
-1901 y(tuple)f(holding)h(several)e(values.)60 2051 y
-Fb(5.4)59 b(Namespaces)60 2146 y Fd(T)-5 b(o)16 b(avoid)i(r)o
-(epeatedly)e(typing)h(in)f(the)h(name)f(of)g(the)g(module)i(\()p
-Fa(MailFolder)c Fd(in)j(this)60 2207 y(case\),)10 b(it)g(can)g(be)f
-(imported)h(into)g(the)g(global)g(namespace)f(with)h(\223)p
-Fa(from\230MailFolder\230import\230*)p Fd(\224.)60 2267
-y(By)15 b(default)g(modules)h(ar)o(e)e(not)h(imported)g(into)h(the)e
-(global)h(namespace)g(and)g(must)g(be)60 2327 y(explicitly)f(named.)903
-2856 y(5)p eop
-%%Page: 6 6
-6 5 bop 60 203 a Fb(5.5)59 b(List)14 b(of)i(Callbacks)p
-60 280 3431 2 v 59 341 2 61 v 85 323 a Fd(Callback)d(Name)p
-655 341 V 258 w(Object)f(T)l(ype)p 965 341 V 48 w(Additional)j(Ar)o
-(guments/T)l(ypes)p 1676 341 V 48 w(Return)e(V)-5 b(alue)p
-2510 341 V 544 w(Documentaion)p 3490 341 V 60 342 3431
-2 v 60 351 V 59 411 2 61 v 85 393 a(FolderOpenHook)p
-655 411 V 216 w(MailFolder)p 965 411 V 1676 411 V 770
-w(void)p 2510 411 V 734 w(Called)14 b(after)e(a)h(folder)f(has)h(been)e
-(opened.)p 3490 411 V 60 412 3431 2 v 59 473 2 61 v 85
-455 a(FolderUpdateHook)p 655 473 V 174 w(MailFolder)p
-965 473 V 1676 473 V 770 w(void)p 2510 473 V 734 w(Called)j(after)e(a)h
-(folder)f(has)h(been)e(updated.)p 3490 473 V 60 474 3431
-2 v 59 534 2 61 v 85 516 a(FolderSetMessageFlag)p 655
-534 V 110 w(MailFolder)p 965 534 V 59 w(\(long\))h(index)h(of)f
-(message)p 1676 534 V 188 w(1)h(if)f(changing)g(\003ags)h(is)g(ok,0)g
-(otherwise)p 2510 534 V 49 w(Called)h(befor)o(e)e(changing)g(\003ags)h
-(for)e(a)i(mesage.)p 3490 534 V 59 595 V 655 595 V 965
-595 V 991 577 a(\(string\)name)f(of)g(\003ag)p 1676 595
-V 2510 595 V 3490 595 V 60 596 3431 2 v 59 656 2 61 v
-85 638 a(FolderClearMessageFlag)p 655 656 V 58 w(MailFolder)p
-965 656 V 59 w(\(long\))g(index)h(of)f(message)p 1676
-656 V 188 w(1)h(if)f(changing)g(\003ags)h(is)g(ok,0)g(otherwise)p
-2510 656 V 49 w(Called)h(befor)o(e)e(changing)g(\003ags)h(for)e(a)i
-(mesage.)p 3490 656 V 59 717 V 655 717 V 965 717 V 991
-699 a(\(string\))f(name)g(of)g(\003ag)p 1676 717 V 2510
-717 V 3490 717 V 60 718 3431 2 v 59 779 2 61 v 85 760
-a(FolderExpungeHook)p 655 779 V 141 w(MailFolder)p 965
-779 V 1676 779 V 770 w(1)h(to)f(expunge,)g(0)h(to)g(abort)p
-2510 779 V 315 w(Called)h(befor)o(e)e(expunging)g(messages.)p
-3490 779 V 60 780 3431 2 v 60 953 a Ff(6)72 b(Further)17
-b(Information)133 1067 y Fc(\017)24 b Fd(Y)-5 b(ou)10
-b(can)g(download)g(the)g(latest)g(version)g(of)g(M)f(fr)o(om)g
-Fa(http://Ballueder.home.ml.org/M/)133 1169 y Fc(\017)24
-b Fd(Y)-5 b(ou)10 b(can)g(also)g(get)f(up-to-date)h(information)g(on)g
-(M)f(fr)o(om)g(the)h(M)f(WWW)g(Page:)h Fa
-(http://Ballueder.home.ml.org/)o(M/)133 1271 y Fc(\017)24
-b Fd(wxW)m(indows)10 b(is)g(available)g(fr)o(om)f Fa
-(http://web.ukonline.co.uk/juli)o(an.smart/)133 1372
-y Fc(\017)24 b Fd(The)9 b(GTK)g(port)g(of)h(wxW)m(indows,)g(wxGTK,)f
-(is)h(available)h(fr)o(om:)i(http://www)-5 b(.fr)o(eibur)o
-(g.linux.de/\230wxxt/)60 1545 y Ff(7)72 b(F)l(AQ)903
-2856 y Fd(6)p eop
+4 3 bop 60 203 a Fb(3.1)59 b(Help)15 b(Needed)60 299
+y Fe(As)i(you)f(can)h(see,)h(we)e(have)h(big)f(plans)h(for)f(M.)h(T)-5
+b(o)17 b(achieve)g(all)h(this,)h(we)d(need)h(some)60
+359 y(help.)f(Ar)o(eas)c(wher)o(e)g(we)f(would)j(use)e(some)h(help)f
+(ar)o(e)133 473 y Fd(\017)24 b Fe(Python)133 575 y Fd(\017)g
+Fe(support)13 b(for)e(further)h(mail)h(pr)o(otocols,)h(LDAP)133
+676 y Fd(\017)24 b Fe(The)17 b(wxQt)g(pr)o(oject,)i(a)f(port)g(of)f
+(wxW)m(indows)h(to)g(the)g(Qt)g(toolkit,)j(will)d(also)h(be)182
+737 y(happy)d(for)g(any)g(help.)28 b(W)-5 b(e)16 b(ar)o(e)g(not)h(dir)o
+(ectly)h(involved)g(in)f(this,)i(but)d(being)g(in-)182
+797 y(volved)e(with)e(wxW)m(indows,)h(we)f(ar)o(e)g(happy)g(to)h
+(support)g(that)f(port.)133 898 y Fd(\017)24 b Fe(If)12
+b(you)g(have)g(access)g(to)h(other)f(systems)h(apart)f(fr)o(om)g
+(Linux/Solaris/W)m(indows,)182 959 y(you)j(ar)o(e)g(very)f(welcome)i
+(to)f(help)h(us)f(port)g(M)h(to)f(those)h(platforms,)g(or)f(to)h(other)
+182 1019 y(har)o(dwar)o(e)c(than)g(Intel.)60 1192 y Ff(4)72
+b(Online)17 b(resources)133 1306 y Fd(\017)24 b Fe(M)13
+b(has)f(a)g(homepage)g(at)h Fa(http://Ballueder.home.ml.org/M)o(/)133
+1408 y Fd(\017)24 b Fe(The)9 b(wxW)m(indows)g(homepage)g(is)h
+Fa(http://web.ukonline.co.uk/julian.sm)o(art/)133 1509
+y Fd(\017)24 b Fe(wxGTK,)9 b(the)g(GTK)h(port)f(of)g(wxW)m(indows,)i
+(is)f(available)g(fr)o(om)f Fa(http://www.freiburg.linux.de/\230wxxt)o
+(/)60 1682 y Ff(5)72 b(F)l(AQ)60 1796 y Fe(Ther)o(e)11
+b(will)j(be)e(some)g(after)g(this)h(r)o(elease)g(-)f(sur)o(ely)-6
+b(.)903 2856 y(4)p eop
 %%Trailer
 end
 userdict /end-hook known{end-hook}if
